Fixed style issues on mobile.

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -118,6 +118,7 @@ section#gallery div {
 	position: relative;
 	min-height: 200px;
 	overflow: hidden;
+	padding-bottom: 2em;
 }
 
 section#gallery div a {
@@ -222,6 +223,6 @@ section#features li {
 }
 
 section#features li svg {
-	width: 80px;
-	height: 80px;
+	width: 50px;
+	height: 50px;
 }
