--- a/site/styles/footer_mobile.less
+++ b/site/styles/footer_mobile.less
@@ -54,32 +54,25 @@ footer div.information div.form_container label {
 
 footer div.information div.form_container label span {
 	display: inline-block;
-	vertical-align: middle;
+	width: 100%;
 	box-sizing: border-box;
-	border: 1px solid @color_gold;
-	border-radius: 5px 0px 0px 5px;
-	border-right: none;
-	padding: 1em;
-	line-height: 1;
 	font-size: 1rem;
 	text-align: left;
-	width: 60%;
-	min-height: 52px;
+	padding: 0.5em;
+	padding-left: 0;
 }
 
 footer div.information div.form_container label input {
 	display: inline-block;
 	vertical-align: middle;
 	border: 1px solid @color_gold;
-	border-radius: 0px 5px 5px 0px;
-	border-left-color: fade(@color_gold, 30%);
+	border-radius: 5px;
 	padding: 1em;
 	line-height: 1;
 	font-size: 1rem;
 	box-sizing: border-box;
-	width: 40%;
+	width: 100%;
 	background-color: transparent;
-	min-height: 52px;
 	color: white;
 	transition: all 0.3s;
 
