--- a/site/styles/header_mobile.less
+++ b/site/styles/header_mobile.less
@@ -10,6 +10,8 @@ header.mobile_title {
 	background-color: white;
 	text-align: center;
 	padding: 1em 0;
+	box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
+	z-index: 100000000;
 }
 
 header.mobile_title a {
@@ -24,10 +26,10 @@ header.mobile_title a svg {
 
 header.mobile_title a.phone {
 	position: absolute;
-	left: 2.5em;
+	left: 3.2em;
 	top: 50%;
 	transform: translateY(-50%);
-	padding: 1em;
+	padding: 0.5em;
 	padding-right: 0;
 }
 
@@ -69,4 +71,19 @@ header.mobile_title a.book {
 	padding: 0.5em;
 	font-weight: 700;
 	margin: 0 1em;
+}
+
+// Mobile menu
+header.mobile_title div.mobile_menu {
+	top: 73px;
+	min-height: 100vh;
+	min-width: 50vw;
+}
+
+header div.mobile_menu a {
+	display: block;
+	box-sizing: border-box;
+	padding: 1em;
+	color: @color_grey;
+	border-bottom: 1px solid @color_grey;
 }
